--- a/reactMath/src/App.css
+++ b/reactMath/src/App.css
@@ -1,42 +1,34 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+  background: linear-gradient(
+          90deg,
+          #05070f,
+          #1c2541,
+          #152236
+      );   
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+.container{
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  column-gap: 20px;
+  
+  padding: 50px;
+  
+  font-size: 2rem;
+  color: white;
+
+  & h1{
+    padding: 40px;
   }
-  to {
-    transform: rotate(360deg);
+  & input{
+    padding: 10px;
+    border-radius: 20px;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
