--- a/reactMath/src/App.css
+++ b/reactMath/src/App.css
@@ -31,4 +31,17 @@ body{
     padding: 10px;
     border-radius: 20px;
   }
+
+  & .options-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    & button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 1.5rem;
+      border-radius: 20px;
+    }
+  }
 }
